--- a/filler.css
+++ b/filler.css
@@ -131,7 +131,7 @@
 .second {
   color: black;
   background-color: white;
-  width: 40%;
+  width: 70%;
   display: flex;
   justify-content: center;
   padding: 20px;
@@ -168,12 +168,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 90%;
   margin-bottom: 10px;
   gap: 10px;
 
   img {
-    width: 410px;
+    width: 400px;
   }
 }
 
@@ -185,19 +185,21 @@
   color: gray;
   margin-top: 40px;
   gap: 20px;
+  width: 100%;
 }
 
 .finalsec2 {
-  width: 100%;
+  width: 95%;
   display: flex;
   justify-content: space-around;
-  /* gap: 20px; */
+  gap: 20px;
 }
 
 .finalsec3 {
   display: flex;
   flex-direction: column;
   gap: 20px;
+ 
 
   button {
     color: black;
@@ -259,4 +261,12 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+}
+
+
+
+
+
+@media screen {
+    
 }
